--- a/ang-app/package.json
+++ b/ang-app/package.json
@@ -4,8 +4,11 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "watch:png-sprite": "onchange './src/sprite-png-src/**/*.png' -- grunt build-sprite-png",
+    "watch:svg-sprite": "onchange './src/sprite-svg-src/**/*.svg' -- grunt build-sprite-svg",
+    "watch:scss": "onchange './src/styles/main/**/*.scss' -- grunt sass_globbing",
+    "start": "parallelshell \"grunt build\" \"npm run watch:png-sprite\" \"npm run watch:svg-sprite\" \"npm run watch:scss\" \"ng serve\"",
+    "build": "parallelshell \"grunt build\" \"ng build --env=prod\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,25 +25,34 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "parallelshell": "^3.0.2",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
+    "@angular/cli": "^1.4.9",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
+    "grunt": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-modernizr": "^1.0.2",
+    "grunt-sass-globbing": "^1.5.0",
+    "grunt-spritesmith": "^6.3.1",
+    "grunt-svgstore": "^1.0.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
+    "jit-grunt": "^0.10.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "onchange": "^3.2.1",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
